# processmanager

./: .gitignore  Cargo.toml  Dockerfile  README.md  processmgr.toml
config/: config.toml
crates/ddshift/src/: lib.rs
crates/rbmq/: Cargo.toml
crates/rbmq/src/: lib.rs
crates/rtcore/: Cargo.toml
crates/rtcore/src/: lib.rs
crates/rtftp/: Cargo.toml
crates/rtftp/src/: lib.rs
crates/xmltojson/: Cargo.toml
crates/xmltojson/src/: main.rs
infrastructure/composer/: datamesh.sh  ftpserver.yaml  fullapp.yaml
infrastructure/composer/scripts/: startcompose.sh
infrastructure/scripts/: installshiftdomain.sh
src/: Cargo.toml  cmd.rs  main.rs
src/ipcmgr/: sendin.rs
src/pmm/: pmmgr.rs
src/wbserver/: html_dir_list.rs  mod.rs
src/xts/: mod.rs  x_string.rs
