workspace = { members = ["crates/xmltojson"] }
[package]
name = "webdev"
version = "0.0.1"
homepage = "https://github.com/solmon/tenantdatamesh"
description = "IoT Gateway with embedded web server"
repository = "https://github.com/solmon/tenantdatamesh"
authors = ["Solmon <solmon@gmail.com>"]
keywords = [
	"web",
	"IoT",
	"development",
    "localhost"
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "webserver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pathdiff = "0.2"
clap =  {version = "4", features = ["cargo"]}
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
