[package]
name = "webdev"
version = "0.0.1"
homepage = "https://github.com/solmon/tenantdatamesh"
description = "IoT Gateway with embedded web server"
repository = "https://github.com/solmon/tenantdatamesh"
authors = ["Solmon <solmon@gmail.com>"]
keywords = [
	"web",
	"IoT",
	"development",
    "localhost"
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = [ "crates/ddshift", "crates/rbmq", "crates/rtcore", "crates/rtftp",
	"crates/xmltojson",
]

[[bin]]
name = "webserver"
path = "src/main.rs"

[[bin]]
name = "rtdomain"
path = "src/rtdomain/bin/main.rs"

[workspace.package]
version = "0.0.0"
authors = ["solmon <solmon@gmail.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }

[dependencies]
xmltojson = { path = "crates/xmltojson" }
tokio = { workspace = true }
tokio-util = { workspace = true }
rtcore = { path = "crates/rtcore" }
rtftp = { path = "crates/rtftp" }
rbmq = { path = "crates/rbmq" }
ddshift = { path = "crates/ddshift" }
warp = "0.3"
pathdiff = "0.2"
clap =  {version = "4", features = ["cargo"]}
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"


[[example]]
name = "xml_check"
required-features = ["serialize"]
path = "crates/xmltojson/src/main.rs"
