[package]
name = "webdev"
version = "0.0.1"
homepage = "https://github.com/solmon/tenantdatamesh"
description = "IoT Gateway with embedded web server"
repository = "https://github.com/solmon/tenantdatamesh"
authors = ["Solmon <solmon@gmail.com>"]
keywords = [
	"web",
	"IoT",
	"development",
    "localhost"
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
members = [ 
	"crates/ddshift", 
	"crates/rbmq", 
	"crates/rtcore", 
	"crates/rtftp",	
]

[[bin]]
name = "webserver"
path = "src/simweb/server.rs"

[[bin]]
name = "rtdomain"
path = "src/rtdomain/bin/main.rs"

[[bin]]
name = "pmgr"
path = "src/pmm/pmmgr.rs"

[workspace.package]
version = "0.0.0"
authors = ["solmon <solmon@gmail.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }
config = "0.14.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies]
config = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "time"] }
serde = { workspace = true }
serde_derive = { workspace = true }
rtcore = { path = "crates/rtcore" }
rtftp = { path = "crates/rtftp" }
rbmq = { path = "crates/rbmq" }
ddshift = { path = "crates/ddshift" }
warp = "0.3"
pathdiff = "0.2"
clap =  {version = "4.5.4", features = ["cargo","derive"]}
futures = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
simple-server = "0.4.0"
http = "1.1.0"
httparse = "1.2.3"
log = "0.4.22"
env_logger = "0.11.3"
anyhow = "1.0.83"
tokio-stream = { version = "0.1.15", features = ["io-util"] }
toml = "0.8.12"
alogfmt = "0.1.0"
command-group = { version = "5.0.1", features = ["with-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
shell-words = "1.1.0"


[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "newweb"
path = "src/simweb/server.rs"

[[example]]
name = "pmgr"
path = "src/pmm/pmmgr.rs"

[[example]]
name = "ipcm"
path = "src/ipcmgr/sendin.rs"
